Prevent background from being cut off

--- a/src/styles.css
+++ b/src/styles.css
@@ -37,6 +37,7 @@ p {
   flex-direction: column;
   justify-content: flex-start;
   margin: 0;
+  min-height: 100vh;
   width: 100%;
 }
 
